--- a/SpotiftClone/Screens/AdminGiris.resx
+++ b/SpotiftClone/Screens/AdminGiris.resx
@@ -120,145 +120,97 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAACH
-        DwAAjA8AAP1SAACBQAAAfXkAAOmLAAA85QAAGcxzPIV3AAAKOWlDQ1BQaG90b3Nob3AgSUNDIHByb2Zp
-        bGUAAEjHnZZ3VFTXFofPvXd6oc0wAlKG3rvAANJ7k15FYZgZYCgDDjM0sSGiAhFFRJoiSFDEgNFQJFZE
-        sRAUVLAHJAgoMRhFVCxvRtaLrqy89/Ly++Osb+2z97n77L3PWhcAkqcvl5cGSwGQyhPwgzyc6RGRUXTs
-        AIABHmCAKQBMVka6X7B7CBDJy82FniFyAl8EAfB6WLwCcNPQM4BOB/+fpFnpfIHomAARm7M5GSwRF4g4
-        JUuQLrbPipgalyxmGCVmvihBEcuJOWGRDT77LLKjmNmpPLaIxTmns1PZYu4V8bZMIUfEiK+ICzO5nCwR
-        3xKxRoowlSviN+LYVA4zAwAUSWwXcFiJIjYRMYkfEuQi4uUA4EgJX3HcVyzgZAvEl3JJS8/hcxMSBXQd
-        li7d1NqaQffkZKVwBALDACYrmcln013SUtOZvBwAFu/8WTLi2tJFRbY0tba0NDQzMv2qUP91829K3NtF
-        ehn4uWcQrf+L7a/80hoAYMyJarPziy2uCoDOLQDI3fti0zgAgKSobx3Xv7oPTTwviQJBuo2xcVZWlhGX
-        wzISF/QP/U+Hv6GvvmckPu6P8tBdOfFMYYqALq4bKy0lTcinZ6QzWRy64Z+H+B8H/nUeBkGceA6fwxNF
-        hImmjMtLELWbx+YKuGk8Opf3n5r4D8P+pMW5FonS+BFQY4yA1HUqQH7tBygKESDR+8Vd/6NvvvgwIH55
-        4SqTi3P/7zf9Z8Gl4iWDm/A5ziUohM4S8jMX98TPEqABAUgCKpAHykAd6ABDYAasgC1wBG7AG/iDEBAJ
-        VgMWSASpgA+yQB7YBApBMdgJ9oBqUAcaQTNoBcdBJzgFzoNL4Bq4AW6D+2AUTIBnYBa8BgsQBGEhMkSB
-        5CEVSBPSh8wgBmQPuUG+UBAUCcVCCRAPEkJ50GaoGCqDqqF6qBn6HjoJnYeuQIPQXWgMmoZ+h97BCEyC
-        qbASrAUbwwzYCfaBQ+BVcAK8Bs6FC+AdcCXcAB+FO+Dz8DX4NjwKP4PnEIAQERqiihgiDMQF8UeikHiE
-        j6xHipAKpAFpRbqRPuQmMorMIG9RGBQFRUcZomxRnqhQFAu1BrUeVYKqRh1GdaB6UTdRY6hZ1Ec0Ga2I
-        1kfboL3QEegEdBa6EF2BbkK3oy+ib6Mn0K8xGAwNo42xwnhiIjFJmLWYEsw+TBvmHGYQM46Zw2Kx8lh9
-        rB3WH8vECrCF2CrsUexZ7BB2AvsGR8Sp4Mxw7rgoHA+Xj6vAHcGdwQ3hJnELeCm8Jt4G749n43PwpfhG
-        fDf+On4Cv0CQJmgT7AghhCTCJkIloZVwkfCA8JJIJKoRrYmBRC5xI7GSeIx4mThGfEuSIemRXEjRJCFp
-        B+kQ6RzpLuklmUzWIjuSo8gC8g5yM/kC+RH5jQRFwkjCS4ItsUGiRqJDYkjiuSReUlPSSXK1ZK5kheQJ
-        yeuSM1J4KS0pFymm1HqpGqmTUiNSc9IUaVNpf+lU6RLpI9JXpKdksDJaMm4ybJkCmYMyF2TGKQhFneJC
-        YVE2UxopFykTVAxVm+pFTaIWU7+jDlBnZWVkl8mGyWbL1sielh2lITQtmhcthVZKO04bpr1borTEaQln
-        yfYlrUuGlszLLZVzlOPIFcm1yd2WeydPl3eTT5bfJd8p/1ABpaCnEKiQpbBf4aLCzFLqUtulrKVFS48v
-        vacIK+opBimuVTyo2K84p6Ss5KGUrlSldEFpRpmm7KicpFyufEZ5WoWiYq/CVSlXOavylC5Ld6Kn0Cvp
-        vfRZVUVVT1Whar3qgOqCmrZaqFq+WpvaQ3WCOkM9Xr1cvUd9VkNFw08jT6NF454mXpOhmai5V7NPc15L
-        Wytca6tWp9aUtpy2l3audov2Ax2yjoPOGp0GnVu6GF2GbrLuPt0berCehV6iXo3edX1Y31Kfq79Pf9AA
-        bWBtwDNoMBgxJBk6GWYathiOGdGMfI3yjTqNnhtrGEcZ7zLuM/5oYmGSYtJoct9UxtTbNN+02/R3Mz0z
-        llmN2S1zsrm7+QbzLvMXy/SXcZbtX3bHgmLhZ7HVosfig6WVJd+y1XLaSsMq1qrWaoRBZQQwShiXrdHW
-        ztYbrE9Zv7WxtBHYHLf5zdbQNtn2iO3Ucu3lnOWNy8ft1OyYdvV2o/Z0+1j7A/ajDqoOTIcGh8eO6o5s
-        xybHSSddpySno07PnU2c+c7tzvMuNi7rXM65Iq4erkWuA24ybqFu1W6P3NXcE9xb3Gc9LDzWepzzRHv6
-        eO7yHPFS8mJ5NXvNelt5r/Pu9SH5BPtU+zz21fPl+3b7wX7efrv9HqzQXMFb0ekP/L38d/s/DNAOWBPw
-        YyAmMCCwJvBJkGlQXlBfMCU4JvhI8OsQ55DSkPuhOqHC0J4wybDosOaw+XDX8LLw0QjjiHUR1yIVIrmR
-        XVHYqLCopqi5lW4r96yciLaILoweXqW9KnvVldUKq1NWn46RjGHGnIhFx4bHHol9z/RnNjDn4rziauNm
-        WS6svaxnbEd2OXuaY8cp40zG28WXxU8l2CXsTphOdEisSJzhunCruS+SPJPqkuaT/ZMPJX9KCU9pS8Wl
-        xqae5Mnwknm9acpp2WmD6frphemja2zW7Fkzy/fhN2VAGasyugRU0c9Uv1BHuEU4lmmfWZP5Jiss60S2
-        dDYvuz9HL2d7zmSue+63a1FrWWt78lTzNuWNrXNaV78eWh+3vmeD+oaCDRMbPTYe3kTYlLzpp3yT/LL8
-        V5vDN3cXKBVsLBjf4rGlpVCikF84stV2a9021DbutoHt5turtn8sYhddLTYprih+X8IqufqN6TeV33za
-        Eb9joNSydP9OzE7ezuFdDrsOl0mX5ZaN7/bb3VFOLy8qf7UnZs+VimUVdXsJe4V7Ryt9K7uqNKp2Vr2v
-        Tqy+XeNc01arWLu9dn4fe9/Qfsf9rXVKdcV17w5wD9yp96jvaNBqqDiIOZh58EljWGPft4xvm5sUmoqb
-        PhziHRo9HHS4t9mqufmI4pHSFrhF2DJ9NProje9cv+tqNWytb6O1FR8Dx4THnn4f+/3wcZ/jPScYJ1p/
-        0Pyhtp3SXtQBdeR0zHYmdo52RXYNnvQ+2dNt293+o9GPh06pnqo5LXu69AzhTMGZT2dzz86dSz83cz7h
-        /HhPTM/9CxEXbvUG9g5c9Ll4+ZL7pQt9Tn1nL9tdPnXF5srJq4yrndcsr3X0W/S3/2TxU/uA5UDHdavr
-        XTesb3QPLh88M+QwdP6m681Lt7xuXbu94vbgcOjwnZHokdE77DtTd1PuvriXeW/h/sYH6AdFD6UeVjxS
-        fNTws+7PbaOWo6fHXMf6Hwc/vj/OGn/2S8Yv7ycKnpCfVEyqTDZPmU2dmnafvvF05dOJZ+nPFmYKf5X+
-        tfa5zvMffnP8rX82YnbiBf/Fp99LXsq/PPRq2aueuYC5R69TXy/MF72Rf3P4LeNt37vwd5MLWe+x7ys/
-        6H7o/ujz8cGn1E+f/gUDmPP8usTo0wAAAAlwSFlzAAALEwAACxMBAJqcGAAABTRJREFUSEuVVQlUlFUY
-        hfJknlyGChURFNEyBREdHJRJwBQEHEEUNRQRMWVzGVPBYRlAGEAWh9gVUMBIwRTrKFOmlhohLtkJd8zK
-        BQlTrAMRgrfv/Y/BjdG859wz793/e/ee9+b/3q/3HJgQlxPzOhlAHEJ8KQDoHD2LTZZW1h3xSWrs03wr
-        MH6TGmOtx7MVqbzk/0FXyFFFVBw9A243PUDFgSPEw6i/1yZokTEJbNVxXvpi0JLO0SPkKpQqwSwiWgWR
-        yKCOtHTGfiLRlQ2RG4VnkbFJbOU2tuBFoPLOEYeJtXiCYBKujGdPcrn8BDLDImKEmnFUS3NzLusGlXaO
-        OEIz8rbj94Ympl7iUreo/bX+LnLyS1hdGJd04+mQwm+OncL20r1M3cilbhFbULIbVafPs7oXHtnTIUWH
-        vz+NLds/Y6qCS91CkVOwAz/8eJHVFXNJN57ZycGjNSjcUc7UaC51C+XWop04fuocq3vpnWTU3byHr7+r
-        YSprPF1YfuBwFeqb2lldJpd04+mQvR+4LISNVMZUDXG1DlaOt3ODi/sSVldBfC4eDwlfPGcc4iPtoJJP
-        QHGa13OZIJcgLmIi/LyEGyCKW3SPrhCDfq/XAgU01xDLiKVAaybwTwYfa+dtWcCDbE6UAH8ko1+fnte4
-        i54vsZwPH4EKhd93iXVRq52hUnpAFS6DptgP//5CV8vddGgK56GyYC7wpxqt56PRciEGLeeUQHuOEGzQ
-        u+d+Wi8eNsakw2G+hDkmMFMttCF7QzxHQr5gFFbNNIfvlMEw7v8GUJ+MS8dWQmRoRhyGM5XLgDupaL0U
-        i/brCag9sgZK/0nMoUnsYglNWz5q8SUCUuej71u9z5C+lijVhhRV57oCF4KAKj/Ul3vC0cYEuJmMXcmO
-        mL1wJeb5ypGnnAS00PFdT8TfP0fByEiEoVMtkFGtxOe0Y+dVNpi8xBKqSjmiyoKxfutSmFkZUwYPKZSM
-        ehsuUhO4SIzhYDUAo4cbAvfV0OTL4O7lD8/5H6FM7QT8lQ78pkLzyQ2wkZgh51oKSm8lYfA7RvDzDkJ4
-        qHDnYVGcG+pxFJN9xj4KqSudRWe+FrgcDBzyhtPEIXRcaTi0bQakUzzg4DQbFZkU0paN1ot0Qd7bDFf7
-        EVi9JwRijxGYajeHmeHyjQb06tEHXstmofBmJAZZGLR3hUjH9Ie741C4S03hJDaC1cgBQGMyvGcMR8j6
-        JASvS4SbvTE67qai7Qq77vOw1tsGDvKpcFpkh6yMnZi30Ad9RQY4eOgsAsOC4Z0txauv6dd0heR+bIvq
-        HbNQneOKio32ZGiOE2XeGG1hiRv3gbqGhzAcaIqrB/xoh5vorUvD6ZLFkHhYw9bXAgGLw5Gi3gL5mjDs
-        330W4g/N4B5py9zpaHjIV8UKKfakOKJcYYuM5ZYwobfrTl0MFlGD2suCYDvNH9MdRqC1IREPrsahjR1Z
-        ezb9h0PhFjUTroGTIJsxF0GBazDyfVOsqJDB0FTUTN49tCHTibfmyqzhQ++5j5cNkhUuQFM69UosVi54
-        DyuIzZej0XE7BS1Cr0QDzZ/gzK6lEA0UoeTWZqzbvQDTI8YgqzEEE70smbMnM9eG6L0p6vUTUETzL4is
-        w6mbG1N5l+NTTtbt1CdoUnM+zBV2Q8s7+gwWIb8xjO6KaEwLEDMtSzAm0GI+0NfXy1Gtc8LZqvU4uS8I
-        NfsCcaKCs6aT2rmgUQ2rTQx1xiv6+qFkYWcuGQRH/3HM8YlvTFcIQZ+4gVj4knz84zaHyDyeAAC9/wCj
-        iaVATOv6hAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAArpJREFUSEvNVV+ITFEYv7OrLSWEPPCgeCEpySOJV3mQhjabNPfOtbEza5aI3bn3
+        k5UHWrX33Cn5k5S5TBGRNw3N7CqkLSQvm/KwhRUesJHr95177pjGNHf2z4Nfne75/v2+853znXO1/xYJ
+        yi03yOlIkujRSSSS5K7VND+mzFOHSWIdiB8atvDrjNe65W5TrpOHYbntIJkIyJzHBrn9UkfiOHR3VRJf
+        t8VJFdI8THI3IPgnyL4alqPX2w5UtgX2t5wkSU6nUkcjHi+0YsUvZKDl7GAd+dTSXfZ2pcv50+nSdXN/
+        sTCH9UafuwpJfvBC9hwTC1kXiYTlbpblk7jFMr0qtIH4Ubrs+VVjNDNcWMp2VNgbVCF6WI4E72mQwOlg
+        OT2UP1JDHoxS3mN7MitWs79O7n2WI4GVX+EAM+usYRlbc69ugrI3xnYimgX/CVQwwnIkkCAnS87mNrGc
+        HvKu1iH3U2XvJdv30rn5smJ0GsuRQKldMsByD7EMoo0g/F2bAFuXYnvVmV1mORJ6r1gG518IemcePT+P
+        dalSvh2k7xX5N1Rlaz63rh+D3wNOoFu5rZKgGSDgglyVLYq8x1IJwq6ytyReKLRKmclRpfJ72vTTERya
+        c1MFcunPEuSsh75FuQRVhj4kPpp9gyuU6V/spsG5fLl4rjriRoXcFm8qcxKfMYYxH6voYDfJWSmJQhiW
+        OJC0xQleUXBrxQcEPjHp7CLMK+Q6OYe57KQltsN+m1fKesR+wbeIh25fnKhN0f4FLtIdSYJT5yR4xC4G
+        pM548MVQHVSLsNKG0GlgAUifh0kymYHZ+MpHqxH5JODHapKMhuSmLU4pp6kB13kniMZBerCTzizGn+lT
+        SN70Y9UIOJhMFeFIOMe29CuX6UG14bUKMQYnVeaZASdBq10C+Xf8ULqVeuZRt4enBU37A+7bB/IzjfCL
+        AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAACH
-        DwAAjA8AAP1SAACBQAAAfXkAAOmLAAA85QAAGcxzPIV3AAAKOWlDQ1BQaG90b3Nob3AgSUNDIHByb2Zp
-        bGUAAEjHnZZ3VFTXFofPvXd6oc0wAlKG3rvAANJ7k15FYZgZYCgDDjM0sSGiAhFFRJoiSFDEgNFQJFZE
-        sRAUVLAHJAgoMRhFVCxvRtaLrqy89/Ly++Osb+2z97n77L3PWhcAkqcvl5cGSwGQyhPwgzyc6RGRUXTs
-        AIABHmCAKQBMVka6X7B7CBDJy82FniFyAl8EAfB6WLwCcNPQM4BOB/+fpFnpfIHomAARm7M5GSwRF4g4
-        JUuQLrbPipgalyxmGCVmvihBEcuJOWGRDT77LLKjmNmpPLaIxTmns1PZYu4V8bZMIUfEiK+ICzO5nCwR
-        3xKxRoowlSviN+LYVA4zAwAUSWwXcFiJIjYRMYkfEuQi4uUA4EgJX3HcVyzgZAvEl3JJS8/hcxMSBXQd
-        li7d1NqaQffkZKVwBALDACYrmcln013SUtOZvBwAFu/8WTLi2tJFRbY0tba0NDQzMv2qUP91829K3NtF
-        ehn4uWcQrf+L7a/80hoAYMyJarPziy2uCoDOLQDI3fti0zgAgKSobx3Xv7oPTTwviQJBuo2xcVZWlhGX
-        wzISF/QP/U+Hv6GvvmckPu6P8tBdOfFMYYqALq4bKy0lTcinZ6QzWRy64Z+H+B8H/nUeBkGceA6fwxNF
-        hImmjMtLELWbx+YKuGk8Opf3n5r4D8P+pMW5FonS+BFQY4yA1HUqQH7tBygKESDR+8Vd/6NvvvgwIH55
-        4SqTi3P/7zf9Z8Gl4iWDm/A5ziUohM4S8jMX98TPEqABAUgCKpAHykAd6ABDYAasgC1wBG7AG/iDEBAJ
-        VgMWSASpgA+yQB7YBApBMdgJ9oBqUAcaQTNoBcdBJzgFzoNL4Bq4AW6D+2AUTIBnYBa8BgsQBGEhMkSB
-        5CEVSBPSh8wgBmQPuUG+UBAUCcVCCRAPEkJ50GaoGCqDqqF6qBn6HjoJnYeuQIPQXWgMmoZ+h97BCEyC
-        qbASrAUbwwzYCfaBQ+BVcAK8Bs6FC+AdcCXcAB+FO+Dz8DX4NjwKP4PnEIAQERqiihgiDMQF8UeikHiE
-        j6xHipAKpAFpRbqRPuQmMorMIG9RGBQFRUcZomxRnqhQFAu1BrUeVYKqRh1GdaB6UTdRY6hZ1Ec0Ga2I
-        1kfboL3QEegEdBa6EF2BbkK3oy+ib6Mn0K8xGAwNo42xwnhiIjFJmLWYEsw+TBvmHGYQM46Zw2Kx8lh9
-        rB3WH8vECrCF2CrsUexZ7BB2AvsGR8Sp4Mxw7rgoHA+Xj6vAHcGdwQ3hJnELeCm8Jt4G749n43PwpfhG
-        fDf+On4Cv0CQJmgT7AghhCTCJkIloZVwkfCA8JJIJKoRrYmBRC5xI7GSeIx4mThGfEuSIemRXEjRJCFp
-        B+kQ6RzpLuklmUzWIjuSo8gC8g5yM/kC+RH5jQRFwkjCS4ItsUGiRqJDYkjiuSReUlPSSXK1ZK5kheQJ
-        yeuSM1J4KS0pFymm1HqpGqmTUiNSc9IUaVNpf+lU6RLpI9JXpKdksDJaMm4ybJkCmYMyF2TGKQhFneJC
-        YVE2UxopFykTVAxVm+pFTaIWU7+jDlBnZWVkl8mGyWbL1sielh2lITQtmhcthVZKO04bpr1borTEaQln
-        yfYlrUuGlszLLZVzlOPIFcm1yd2WeydPl3eTT5bfJd8p/1ABpaCnEKiQpbBf4aLCzFLqUtulrKVFS48v
-        vacIK+opBimuVTyo2K84p6Ss5KGUrlSldEFpRpmm7KicpFyufEZ5WoWiYq/CVSlXOavylC5Ld6Kn0Cvp
-        vfRZVUVVT1Whar3qgOqCmrZaqFq+WpvaQ3WCOkM9Xr1cvUd9VkNFw08jT6NF454mXpOhmai5V7NPc15L
-        Wytca6tWp9aUtpy2l3audov2Ax2yjoPOGp0GnVu6GF2GbrLuPt0berCehV6iXo3edX1Y31Kfq79Pf9AA
-        bWBtwDNoMBgxJBk6GWYathiOGdGMfI3yjTqNnhtrGEcZ7zLuM/5oYmGSYtJoct9UxtTbNN+02/R3Mz0z
-        llmN2S1zsrm7+QbzLvMXy/SXcZbtX3bHgmLhZ7HVosfig6WVJd+y1XLaSsMq1qrWaoRBZQQwShiXrdHW
-        ztYbrE9Zv7WxtBHYHLf5zdbQNtn2iO3Ucu3lnOWNy8ft1OyYdvV2o/Z0+1j7A/ajDqoOTIcGh8eO6o5s
-        xybHSSddpySno07PnU2c+c7tzvMuNi7rXM65Iq4erkWuA24ybqFu1W6P3NXcE9xb3Gc9LDzWepzzRHv6
-        eO7yHPFS8mJ5NXvNelt5r/Pu9SH5BPtU+zz21fPl+3b7wX7efrv9HqzQXMFb0ekP/L38d/s/DNAOWBPw
-        YyAmMCCwJvBJkGlQXlBfMCU4JvhI8OsQ55DSkPuhOqHC0J4wybDosOaw+XDX8LLw0QjjiHUR1yIVIrmR
-        XVHYqLCopqi5lW4r96yciLaILoweXqW9KnvVldUKq1NWn46RjGHGnIhFx4bHHol9z/RnNjDn4rziauNm
-        WS6svaxnbEd2OXuaY8cp40zG28WXxU8l2CXsTphOdEisSJzhunCruS+SPJPqkuaT/ZMPJX9KCU9pS8Wl
-        xqae5Mnwknm9acpp2WmD6frphemja2zW7Fkzy/fhN2VAGasyugRU0c9Uv1BHuEU4lmmfWZP5Jiss60S2
-        dDYvuz9HL2d7zmSue+63a1FrWWt78lTzNuWNrXNaV78eWh+3vmeD+oaCDRMbPTYe3kTYlLzpp3yT/LL8
-        V5vDN3cXKBVsLBjf4rGlpVCikF84stV2a9021DbutoHt5turtn8sYhddLTYprih+X8IqufqN6TeV33za
-        Eb9joNSydP9OzE7ezuFdDrsOl0mX5ZaN7/bb3VFOLy8qf7UnZs+VimUVdXsJe4V7Ryt9K7uqNKp2Vr2v
-        Tqy+XeNc01arWLu9dn4fe9/Qfsf9rXVKdcV17w5wD9yp96jvaNBqqDiIOZh58EljWGPft4xvm5sUmoqb
-        PhziHRo9HHS4t9mqufmI4pHSFrhF2DJ9NProje9cv+tqNWytb6O1FR8Dx4THnn4f+/3wcZ/jPScYJ1p/
-        0Pyhtp3SXtQBdeR0zHYmdo52RXYNnvQ+2dNt293+o9GPh06pnqo5LXu69AzhTMGZT2dzz86dSz83cz7h
-        /HhPTM/9CxEXbvUG9g5c9Ll4+ZL7pQt9Tn1nL9tdPnXF5srJq4yrndcsr3X0W/S3/2TxU/uA5UDHdavr
-        XTesb3QPLh88M+QwdP6m681Lt7xuXbu94vbgcOjwnZHokdE77DtTd1PuvriXeW/h/sYH6AdFD6UeVjxS
-        fNTws+7PbaOWo6fHXMf6Hwc/vj/OGn/2S8Yv7ycKnpCfVEyqTDZPmU2dmnafvvF05dOJZ+nPFmYKf5X+
-        tfa5zvMffnP8rX82YnbiBf/Fp99LXsq/PPRq2aueuYC5R69TXy/MF72Rf3P4LeNt37vwd5MLWe+x7ys/
-        6H7o/ujz8cGn1E+f/gUDmPP8usTo0wAAAAlwSFlzAAALEwAACxMBAJqcGAAABKFJREFUSEud1ltMm2UY
-        B/AH4xbjhbdeeIVZ4jwkM3FmNxpvjFk8Js7ojdGo08TDhRoPWTTxxhsTDYuL24AxBqxQoBwGg8FkMNZ1
-        UloKKz1QCl0LBcq5UCiUlv39f28ppVAHs8mbsba8P573ObyfSKhwYxVwnRMJloj4y0WGq0UG63LEdfmY
-        9LcUSu81q1g7J8R8a1FMlpDc6LVJu+O8/D3wnrQM75PLAZFL4yI1UyJVYZHKRa6F5LoH8iURHxEQAREQ
-        AREQAREQAREQGSHy9f0guURMREAECnG0EuC6Sex6G6TNSMAK6XCmEBABESuRJ3dDniISIYIkUp9ELAbk
-        2NrwqrcfXwXu4A23Fw/esEEaCWlIqy+FgEiMyOFMZJKbq5X/GJFlIkgjjMRWgdd9FiTurmP76127H1LX
-        tzUSDQGRhOgjB0RPSFsyc4brtMj0WbtMFCGNGJiLMrzgM6oNR+NrjMCGAxYzjvY54VmNqfeP9oxADDy2
-        Jv67icxDypeG5WJURLdMZO6Uto4TQQbi1UOceoTX41hMJHhkzZDOBuaFyW/p4BGZMRFbw9pd8Ng8BBhV
-        JgIpW/1WymJEwidF5k/N7UAGSnDQ367+2uNBVpGJx9fDhGvVdYu5aDDhbUdAff68OQipHspEKjQktiIl
-        iX0iC3lvMRLsQNzFeDloUpscGeqCdLEItpbwFTMOdnnV58d6Q5BKbzYEciHxgchiXmlWxFOGR4evqE1+
-        n+ZRGCuTSPc/jIRIvRE/+ULq81wjk25g8ncgq5Di9ToNsWdFhqog9jJ0RufURofc3LyD0bRfZZKv4Qmz
-        U71vi/CvrXExL9tykkY8GjKbFfHVsAl17HQ9bNEFtWF+aBQ/DA/hr+AE4vy/Z5mbNNohtW5I87bqSiNz
-        GrK8AwmwsgYvqhJ+hSU8uraqkO2vmbU4XrMwAg2pZUM2TmRDlnZGMlbKHilWiS8J+9Vm/lgUnwcceNbR
-        jVybBYesdnzq8mOAkWgvw/giq4s5qRwllj0SRwYySmDwNKqWgmqDX6Y4NnpqWVHa0uYXk99+kx1u4urB
-        955J9b3GqRVuyqiqJrcjXg3RbSKh84wiDx/NmtUvfjfNTrbyvb5GrvbMEjZynFy9DdHb8JlrWn3/Gycj
-        KhpjVBlIg9Yn72wi42eRM1KkfsEZW2B1MTIHK6qfEWQb9R1s0hbmo9wF83zy6PYbGIludgPR+mT9Y63j
-        H2DHRxQy8gfenL2uvvzSGEdHP6NwN937PmnjcVa6ccSU7Jn3rYymcDqFxNnxD6Vm1xcKCfyGltVkLvb7
-        OEbcFclRv9ul1TDIykqOmO65OKSAydep4zqRnF3aFJ7VpvCZQQn+iV8jt9Ec5bkOsYw9nMR7QZo5t+r9
-        aJpcwUlvFFLK49ItBdNTOHWfTOU/zsQnZKSAwLnMS2s3pHXjPtGzhMs5x6rD/DnyTPo+Ubcir93kzXhY
-        ghficoeNuPX63f2OTyL17HiD1ifhF3e745/mWOn9X8ilcRc7/rm9PEiknlZ+JBLaIzJD5Gci9/1IpD13
-        PUzkQyIVRPqJTBLRnrumiDiIVBH5hMgjRP7juWtB/gUGOBISjeXp+wAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAkFJREFUSEu9lL9PFEEUx88fiRbEBmy0MCRgYkywsfAfMFYgFjRGCbK7XDRqpxHB
+        Y4BoYSU3M0cIIg3V5WaPH+a0O3fuQoxixMbSBggUhsTEH4k/WN9cHpocb273SPSTfLN7b9/3++Z2ZzcR
+        RQ+bPugwed1lYsZjYhmOr7whMeUyfqmrK7sP23aHmxJnIfCDOyRCi964LNOG7fVhjBD+1QTBij/BccxN
+        cQeGXoX6E9B3HLJypT99GG1xCfdAwPtKABNL3f2iES/8ITk41grX10yPx2QWy/HovZc+hasL3UF5Ass7
+        8FLiAvb9MM8Ky9E4KdleMTLx0fwbLO+gj000/V0Ib8ZyNA7jnThgFUsk15hs2B4AO60Fy9H81wEiVz4p
+        lebS10ugdekHq3BcFEo/GJ1eMA96dwOSI+PhyOTsZwj7CQpJKf1lIJMNvWFZ34Dk8OT5hzPP6VBCo1Nz
+        oTMgjqE9GqmCx1RQLXGlb6C9Nnw+aKYCUFtEbVub6ULhAMbYkXndQ5iNvgm/dJzn9DniWkUZVT6DMXZg
+        wG3S7OtlbEnAb/LBZ1TQgS12YBveIc1xBuR1J7bY+ecDhK9vkeYYA+RsqR1b7AhVukyafb3GWLh3YqHY
+        BOfkbuK58mmMscPnykeg+Ve1GfUC9K6qhgo2WLG4H2NqA7fjPh1iF+ygi2iPxtwKMD2rDrGr9Ait8TFv
+        JXwx78IHzXzwiFCjYANevl6zILTVz3h28WhlkK+fQuBbmQ9ew4oVBN9MF14ewjYLicRvg6gEsw1iqS4A
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAUCAYAAACXtf2DAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAwNJREFUSEuVVF1IU2EY3rSbuq2bufO3mYU/87dEZqESYRAkEgQSiaArzJToorpS
+        KLrQqyxazoxu0qACLxRxhWAXQg0p8MZA1HAWNSWDuekMfXve7ZzTjjuWPvDAOe/P833f+77fZzHDEZvt
+        kCRJPZIg/FIk6RFM1oTHAKsiiq/hj3BspiAcVu3/BpIuIGm5ob6eJiYm6HhJCcmieFd1a0hDjNddVkaB
+        QICutbSQU1EItpuq3xRWCN3Jz8uj4aEh2trainNmZoYKXC7CwrcqLJZ9iEtHXO/J8nJaWFjQ414MDJAs
+        SYGElAkgcK64qIg+T0/rSRonJyfJlZvLO3yGuOeVFRX0dXFR9/MmcrOzCaVqUeVS4RDF07zTqakpg7hG
+        LkVhfj6dqa6mUCik28PhMJ2qquIydqlSOwNBN3gn78bHDeIa5+fmaGVlRf/f3Nykyx4PyYLwFunpCZX/
+        AGW45JDl2NO+PoO4GR90dxMm7UtGRsZBNX13QC3diiB8u97WRpFIxFR8bnaWMh0OLs1tNW1vkGW5Eqch
+        X0+P6QLMkZERykFJEdeBlLRE5i4A8UKcItTV2WkqnEyeuhNuN4/oS0EQ9qsSO8MpisdQnp9cXzNBMy4v
+        LdH52loe0/f8CqhSqXAIQik/Dz6fz1RobGyM+FQ8Pdt96+vrdAUThc19tNlsB1TJv8DqxSz+pLc3JZnJ
+        uyzBReQYbn4sFkuJ2djYoNqaGu7JPVU2AafdnsVleez1piRpvNrczIk6L9bV0erqqiFmbW1NuxevVOk4
+        rA40qKmx0RCcTP/oqEFcI++WT6bFdbS3x+2oxgfwbFwd3b/PRlwueuP3G4SZ0WiU+NVMFk5mWWkpDfT3
+        6+LJxB3p5AXCmuFoVhYNDg4aFuBpSk7aE1F2fho8WOR3sqOttTX+7gSDQcrLyTEm7ZIYhhhO0BAvEzcZ
+        Pw9h/GEWvBdC4zua3I0eOOPi25CmKEoBAj2S3e5F8/14/z/hhEEeT9ijYIS/2cY+lGGYBRHbhHvkYo2E
+        FMNi+QMsljWfbmzrmQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAACG1JREFUeF7tWluMVdUZ5qUvtU9NGhJKPXv2WjNz5sIww3EYBsodFSkww8XxUhDF
+        QcZ7tQWTMjzUaB+aRmt6UUMlaKKIWqFoHCNaRaNBcRgQNJiMPmgbibEvmhD05e/3rb325ZxZh+Oc2ecw
+        Tc6ffGEze63/stZ/W+vsKTWqUY1qVKMa1ahGlaRp06b9UHleL/CQuth7WWW8UZ3x/ot/vyPs86h5xzEY
+        yzl2+v8nTZ8+/ccw5HoYdQDGnQVknDhr5oIHeVm2k59aftLyI5Wp2wkDvi4waCIAr7rBtqlTL7JiJh/l
+        crkf+J43AGXPFCgv2EVRc7OiBrpE3b9I/F2Xi793hfgHVgXgM/7Gd2YMx3JOIZ+M9wVlUJYVOzlIKfUz
+        KDdcoKyo7qz4d88Vf89y8Q+uHh84B3NVd2M+zwDDlGnFX1jSmUw3FMrf9fZ68Qfni//P2KDsa32SO9Yv
+        3R/fLj//9G5Z9J/tsuzLHQZ85t/4jmM4NloI8gAvNbM+uQDEGe15c6waF4b0xXUboci3kVJ+nfi3zxH/
+        ebg1lG98tU9mn7oZBt4jCz/fJp2nb5G2D/ql9cRmaTq2SfSxjQZ85t/4jmM4lnM4N3voymAhyBO8KSOS
+        l/HOUQerTnXJGh8r06LEf2BpYPgr62XO6Vtl4b+3ScepmyQ7QmM3jAvZkevMXPLoPn2b4Une6sGlRlZS
+        NnTZYNWqDtH1IDjeecb6nivEf6FHOj/YCqW3y8yT/VI/4jZuPCCP9pNbZCHChLwpg/mBMiP59IRqhYNN
+        eHHM0/hnV0r90FrE8V2S+2hA9Ahd223QREDelEFZlFmwCGcqnhhZfiAozvZ0e+x807+ulgWf/UZaTtzg
+        VDxNUAZlUSZlF4TDcEVLpK3zgTAmPMQ8Ex13pREx61K4EqAsymSCNDkhmRg9b6tVN10KOrzY9ZmR6Yrz
+        PvmVNJps7la2UqBMyqYOitUhXAA0SxXpGG17GwhBnVcHemTe6J0mW7sUrAYomzpQl/w+oW7Qqp0OmYNN
+        JvNNKICNyayRLdJ0vPIxXwrNx6+HLv3i70CzFC2A93WqByhzqguZI/M2vLxech8i2zsUuhDIfbjV6JTX
+        NnveJqv+xMkeaQ1j9uezTw1IfbG4f/da0c/0IjldJnobduXaS0QtbhU1ByVrVoOoGXDVLDJ3A5DD/5e2
+        il43S9SNiONfzxd9/xLRT64W/Tb4uPg70AB0nhwQdVd3vAAZb79Vf2JkLjPC8zxOaNnn10jbiRvHKvIi
+        dmAtDKn3k0qUD54GFzSLunOe6CdWiT76y7EyE6BOTf9AQoxPkWdTuVQBw95IKRxTZx7d7FTA7HI4rhJo
+        g+dsXyD69auc8gnqlmyO0B32WDPKJyzAQ5ESN3dJ+/F+p3A1O68rGwu6fFdToCDDgeMvQcwyHFzji0HV
+        ib6hS/T+NWN0oG7UMRoL3a0Z5ZO9wzMMW3avKn6w2bUiMKoDcd2XE7Vzkei/XGHygX4DuzbsmBPi7WtE
+        H4BBj/1C1L1LRF3XiYXCYoWGFMMfL83jQ92aHsOBKR4zZM0on8BkNGTYPFTc/SoCdHr6PnR6K2YmYzsG
+        wq5wTvNLfckxo9aM8sne2BqGTYexUwUCqwYm2X64d7LtvQ0JsmAcdYzeZ7yvrBnlE5jw6towzB75ni3v
+        W1eLfnSF6N8uFL0R7nzpjCDum7WoRsQ8457PzAmXtYm6BiFzD8Y+jMPNa31uniFewXt6Bd3/6Nj32SPI
+        R/ECfGvNKJ/AJFqAxqMlFoAuu7pdVF3erc34Mb9F9K1zRT/dc/7c4UDj+xuTvCa+AMkQqC9Ri7mLCeHp
+        gFWDCZWJ0iGzENQxMT+VEIiSoKJrO4RGeHxlHKMaDRFd/xZ0Z79fKvrPy0Xvxvt9qAr7sLN7VhqXN+6M
+        WFa9Hecvia3oAwaxEOw0XbJDvHVVct7Ek2CyDKqDa91CkxhaH9ToEt7iBGOabfTOxcUbK7TWzrkW6uCa
+        5PgUymCyEfrb5U6hFcOzWIwtOCMk22vmB9dYC/XX5fHYVBqhZCu8qdMptCTeROiwIUIIMBTUn7CQfH4O
+        fzuErF7KrV/FGCbFnvZgjmuMhWmirL6ptMJ5hyHEd0ll30Gy+t1i0ZtRs5ejxPH0Fy5gMTBvMF/cgbrO
+        Uni4RK4pBuiW6BPSOQyRksdh9QR2ziU8BHYqGlsumEDp+i+sc8sohsfRSsd80jkOkxAG8YVIL9zQJTzE
+        H5YFuzADjc5KtLCsAujvTRXgsZYuzHB4Cmf+R7DbqBBqAGMWtDjbXd4VmPsBl6wCqB54XDg3zQuR4Eos
+        /rlbv1iiGpRTAYiwg+QFSWgIwdBjdXHNCQGdEnPSvRIjJS9F9TIcQsbZoY0bKLmm9+fxtxXedL4WeRjN
+        z5Jk2Uz5UpTEq2Ywj38R+jt2yqVM2mAHWKILVLsQSpHxFboWJ+X9MNLgB+XNoVBVcRidH3SJ9KrUDyOk
+        wp/G9Lwm0Ue+/+Vl6qBs6BAZX+mfxkhjfhxd01F+0psIKBMVKdIDrq9/qqdbNStL9ufxc5FwnOf1e9Xz
+        BAVZ5g4hNv5cved1WfWqQ2M+kJgLV3y9xGVGGoAMIyshu+ofSIRkFyH+UEKjAUI3VpESCZ7kbWTExvMT
+        mQtjfEg2HPI/kmKfsP/8h5ZxAcdr8syTAZlV+yqkFBX7TI5JSu9FG/tuGZepnLMXrXMv2ukCvsDk+Uwu
+        JFMiUYOh3BcFygY9/roOUY+iYXkJBxzUblPC3oehBJ9Zz/HOjOFY1zU4eUNGxUvdRCjoGOsGoWzKn8pm
+        dkzqT2ULyRygcCKD8vuB8j6W5lzwSP1gU23ixQRvZ2AMr9eGAF60fgWwghB85t+GOIZjU7vMqFGNalSj
+        GtWoRjVy0pQp/wPZtO/tj/aPFwAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
