--- a/SpotiftClone/Screens/Anasayfa.resx
+++ b/SpotiftClone/Screens/Anasayfa.resx
@@ -120,4 +120,123 @@
   <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAhtSURBVHhe7VpbjFXVGealL7VPTRoSSj179lozc+bCMMNx
+        GAbKHRUpMMPF8VIQxUHGe7UFkzI81GgfmkZrelFDJWiiiFqhaBwjWkWjQXEYEDSYjD5oG4mxL5oQ9OXv
+        96299uWcWYfjnNnnME3On3xhM3ut/7LWf1vr7Ck1qlGNalSjGtWoRpWkadOm/VB5Xi/wkLrYe1llvFGd
+        8f6Lf78j7POoeccxGMs5dvr/J02fPv3HMOR6GHUAxp0FZJw4a+aCB3lZtpOfWn7S8iOVqdsJA74uMGgi
+        AK+6wbapUy+yYiYf5XK5H/ieNwBlzxQoL9hFUXOzoga6RN2/SPxdl4u/d4X4B1YF4DP+xndmDMdyTiGf
+        jPcFZVCWFTs5SCn1Myg3XKCsqO6s+HfPFX/PcvEPrh4fOAdzVXdjPs8Aw5RpxV9Y0plMNxTK3/X2evEH
+        54v/z9ig7Gt9kjvWL90f3y4///RuWfSf7bLsyx0GfObf+I5jODZaCPIALzWzPrkAxBnteXOsGheG9MV1
+        G6HIt5FSfp34t88R/3m4NZRvfLVPZp+6GQbeIws/3yadp2+Rtg/6pfXEZmk6tkn0sY0GfObf+I5jOJZz
+        ODd76MpgIcgTvCkjkpfxzlEHq051yRofK9OixH9gaWD4K+tlzulbZeG/t0nHqZskO0JjN4wL2ZHrzFzy
+        6D59m+FJ3urBpUZWUjZ02WDVqg7R9SA43nnG+p4rxH+hRzo/2Aqlt8vMk/1SP+I2bjwgj/aTW2QhwoS8
+        KYP5gTIj+fSEaoWDTXhxzNP4Z1dK/dBaxPFdkvtoQPQIXdtt0ERA3pRBWZRZsAhnKp4YWX4gKM72dHvs
+        fNO/rpYFn/1GWk7c4FQ8TVAGZVEmZReEw3BFS6St84EwJjzEPBMdd6URMetSuBKgLMpkgjQ5IZkYPW+r
+        VTddCjq82PWZkemK8z75lTSabO5WtlKgTMqmDorVIVwANEsV6RhtexsIQZ1XB3pk3uidJlu7FKwGKJs6
+        UJf8PqFu0KqdDpmDTSbzTSiAjcmskS3SdLzyMV8Kzcevhy794u9AsxQtgPd1qgcoc6oLmSPzNry8XnIf
+        Its7FLoQyH241eiU1zZ73iar/sTJHmkNY/bns08NSH2xuH/3WtHP9CI5XSZ6G3bl2ktELW4VNQcla1aD
+        qBlw1SwydwOQw/+XtopeN0vUjYjjX88Xff8S0U+uFv02+Lj4O9AAdJ4cEHVXd7wAGW+/VX9iZC4zwvM8
+        TmjZ59dI24kbxyryInZgLQyp95NKlA+eBhc0i7pznugnVok++suxMhOgTk3/QEKMT5FnU7lUAcPeSCkc
+        U2ce3exUwOxyOK4SaIPnbF8g+vWrnPIJ6pZsjtAd9lgzyicswEOREjd3SfvxfqdwNTuvKxsLunxXU6Ag
+        w4HjL0HMMhxc44tB1Ym+oUv0/jVjdKBu1DEaC92tGeWTvcMzDFt2ryp+sNm1IjCqA3HdlxO1c5Hov1xh
+        8oF+A7s27JgT4u1rRB+AQY/9QtS9S0Rd14mFwmKFhhTDHy/N40Pdmh7DgSkeM2TNKJ/AZDRk2DxU3P0q
+        AnR6+j50eitmJmM7BsKucE7zS33JMaPWjPLJ3tgahk2HsVMFAqsGJtl+uHey7b0NCbJgHHWM3me8r6wZ
+        5ROY8OraMMwe+Z4t71tXi350hejfLhS9Ee586Ywg7pu1qEbEPOOez8wJl7WJugYhcw/GPozDzWt9bp4h
+        XsF7egXd/+jY99kjyEfxAnxrzSifwCRagMajJRaALru6XVRd3q3N+DG/RfStc0U/3XP+3OFA4/sbk7wm
+        vgDJEKgvUYu5iwnh6YBVgwmVidIhsxDUMTE/lRCIkqCiazuERnh8ZRyjGg0RXf8WdGe/Xyr6z8tF78b7
+        fagK+7Cze1YalzfujFhWvR3nL4mt6AMGsRDsNF2yQ7x1VXLexJNgsgyqg2vdQpMYWh/U6BLe4gRjmm30
+        zsXFGyu01s65FurgmuT4FMpgshH62+VOoRXDs1iMLTgjJNtr5gfXWAv11+Xx2FQaoWQrvKnTKbQk3kTo
+        sCFCCDAU1J+wkHx+Dn87hKxeyq1fxRgmxZ72YI5rjIVpoqy+qbTCeYchxHdJZd9BsvrdYtGbUbOXo8Tx
+        9BcuYDEwbzBf3IG6zlJ4uESuKQbolugT0jkMkZLHYfUEds4lPAR2KhpbLphA6fovrHPLKIbH0UrHfNI5
+        DpMQBvGFSC/c0CU8xB+WBbswA43OSrSwrALo700V4LGWLsxweApn/kew26gQagBjFrQ4213eFZj7AZes
+        AqgeeFw4N80LkeBKLP65W79YohqUUwGIsIPkBUloCMHQY3VxzQkBnRJz0r0SIyUvRfUyHELG2aGNGyi5
+        pvfn8bcV3nS+FnkYzc+SZNlM+VKUxKtmMI9/Efo7dsqlTNpgB1iiC1S7EEqR8RW6Fifl/TDS4AflzaFQ
+        VXEYnR90ifSq1A8jpMKfxvS8JtFHvv/lZeqgbOgQGV/pn8ZIY34cXdNRftKbCCgTFSnSA66vf6qnWzUr
+        S/bn8XORcJzn9XvV8wQFWeYOITb+XL3ndVn1qkNjPpCYC1d8vcRlRhqADCMrIbvqH0iEZBch/lBCowFC
+        N1aREgme5G1kxMbzE5kLY3xINhzyP5Jin7D//IeWcQHHa/LMkwGZVfsqpBQV+0yOSUrvRRv7bhmXqZyz
+        F61zL9rpAr7A5PlMLiRTIlGDodwXBcoGPf66DlGPomF5CQcc1G5Twt6HoQSfWc/xzozhWNc1OHlDRsVL
+        3UQo6BjrBqFsyp/KZnZM6k9lC8kcoHAig/L7gfI+luZc8Ej9YFNt4sUEb2dgDK/XhgBetH4FsIIQfObf
+        hjiGY1O7zKhRjWpUoxrVqEY1ctKUKf8D2bTv7Y/2jxcAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAATsQADUu5DlhMvA6aS7sPy0u7
+        D+tLuw/7S7sP+0u7D+tLvA/LTLwOmku8DlhOxAANAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAS7sPIky7DppLvA/0TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0u8D/RMvA6aS7sPIgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASLYAB0u8D4dLuw/5TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9Luw/5S7wPh0i2
+        AAcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEe/DyBLuxDPTLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/S7wQz0e/DyAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABLvwssTLsP50y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLsP50m7Cy0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAR78PIEy7
+        D+dMvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLsP50e/DyAAAAAAAAAAAAAAAAAAAAAAAAAAAEi2
+        AAdLuxDPTLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/S7wQz0i2AAcAAAAAAAAAAAAA
+        AAAAAAAAS7sPh0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/S7wPhwAA
+        AAAAAAAAAAAAAEu7DyJLuw/5TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/S7sP1Eq7D3FLuw/hTLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9Luw/5S7sPIgAAAAAAAAAATLsOmky8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9Luw/+S7sPxUy7DloAqgADAAAAAEq7Do9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvA6aAAAAAE6wAA1LvA/0TLwQ/0y8EP9MvBD/TLwQ/0y8D91GuAgdS7kPM0m6
+        D2RLuw6LS7sPqUu7DrxLvA/DSroOv0u7Dq1Kuw6MSrwNXEu8CRsAAAAAAAAAAD+/AAxKvA5+S7sP9ky8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0u8D/ROxAANTLsOV0y8EP9MvBD/TLwQ/0y8EP9MvBD/S7sP1Tqw
+        AA0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEm7Cy1Kuw6JS7wP7Ey8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0u8DlhMuw6aTLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/S7wP9ku7D8hLuw6cS7sOeUu7DV9LvQ1OSbwNSUu6DU5Luw1fTL0OfEu6D6hLvA/hTLwQ/0y8
+        EP9MvBD/TLwQ/0u8D+VMuw/CS7sQ/ky8EP9MvBD/TLwQ/0y8EP9MvBD/TLwOmku7D8tMvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0u8D+lLvA56TMwACgAAAABLuw+mTLwQ/0y8EP9MvBD/TLwQ/0y8EP9LvA/LS7sP60y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/S7wP6Uu8D7dMvA/uTLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/S7sP6ku7D6ZJuw9TVdQABgAAAAAAAAAAP78ABEu8D7dMvBD/TLwQ/0y8EP9MvBD/TLwQ/0u7
+        D+tLuw/7TLwQ/0y8EP9MvBD/TLwQ/0y8EP9LvA42AAAAAAD/AAJLuQssTLsOV0q6D3RLuw+ES7sPiEu7
+        D4BKuw5tS7oNTki9DiMAAAAAAAAAAAAAAAAAAAAAAP8AAUm7D1NLvA/WTLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/S7sP+0u7D/tMvBD/TLwQ/0y8EP9MvBD/TLwQ/0y7DlcAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASL0OI0u7DnlLvA/bTLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9Luw/7S7sP60y8EP9MvBD/TLwQ/0y8EP9MvBD/S7sP/kq7D9BLvA+RSrwPYEi7
+        DDxLuw8iTL8MFEu0DxFKvwoYSroMKUm8DkVMvA5rSroOnUq7D9pLuw/+TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EL9Luw6bS7sP8Uy8EP9MvBD/TLwQ/0u7D+tLuw/LTLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/S7sP/Ey7
+        D7VKvA9BAAAAAAAAAABKvA9gTLwQ/0y8EP9MvBD/S7wPy0y7DppMvBD/TLwQ/0y8EP9MvBD/S7wP20u8
+        D5FLuw/ETLwP+Ey8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9Luw/nS7wOrUu7
+        DmlEugkaAAAAAAAAAAAAAAAAAAAAAEu8EG9MvBD/TLwQ/0y8EP9Luw6bTLsOV0y8EP9MvBD/TLwQ/0u7
+        D/5LvAkbAAAAAAAAAABItgAHSLwLLkq7EE9KvA5nTLsPdUq6DntLvA93S7oObEu8DlhIuww8RbkLFgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAEi2AA5Kug+CS7sP90y8EP9MvBD/TLwQ/0q9DllOsAANS7wP9Ey8
+        EP9MvBD/S7sP/ka4CB0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAEi8Cy5LvA6OS7wP8Ey8EP9MvBD/TLwQ/0y8EP9LvA/1SLYADgAA
+        AABKuw6aTLwQ/0y8EP9MvBD/TLwP2ku8D3dKuA06TLIACgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAB/AAJGuA4kSbsOV0u7D5RLuw/bTLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0q8
+        Dp0AAAAAAAAAAEu7DyJLuw/5TLwQ/0y8EP9MvBD/TLwQ/0y8EP9Luw/9S7wP4Uu8D8RLvA+wS7sPo0u8
+        Dp5Luw+iS7wOrEu7Dr5LvA/XS7sP90y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9Luw/6S7oNJQAAAAAAAAAAAAAAAEu7D4dMvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0q7DowAAAAAAAAAAAAAAAAAAAAASLYAB0u7EM9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvA/TOKoACQAAAAAAAAAAAAAAAAAAAAAAAAAAR78PIEy7D+dMvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/S7sP60a/DiQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAS78LLEy7
+        D+dMvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8D+pIuw8xAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAR78PIEu7EM9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9Luw/URr8OJAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAASLYAB0u7D4dLuw/5TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9Luw/6S7wOjTjGAAkAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEu7DyJKuw6aS7wP9Ey8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9Luw/2S7sOnkm7DSYAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABOsAANTLsOV0y7
+        DppLuw/LS7sP60u7D/tLuw/7S7sP60u8D8tLuw6bSbsOWkS7AA8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/8AD//8AAP/8AAA/+AAAH/AAAA/gAAAHwAAAA8AAAAOAAAABgAACAQAA
+        GAAA/+AAAAAAAAAAAIAAAAMAAQA8AAH/8AAAAAAAAAAAYAAAAeADAB+AA//+AIB/wAGAAAABwAAAA8AA
+        AAPgAAAH8AAAD/gAAB/8AAA//wAA///AA/8=
+</value>
+  </data>
 </root>
