--- a/SpotiftClone/Admin/AdminForm.resx
+++ b/SpotiftClone/Admin/AdminForm.resx
@@ -117,4 +117,123 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAACG1JREFUeF7tWluMVdUZ5qUvtU9NGhJKPXv2WjNz5sIww3EYBsodFSkww8XxUhDF
+        QcZ7tQWTMjzUaB+aRmt6UUMlaKKIWqFoHCNaRaNBcRgQNJiMPmgbibEvmhD05e/3rb325ZxZh+Oc2ecw
+        Tc6ffGEze63/stZ/W+vsKTWqUY1qVKMa1ahGlaRp06b9UHleL/CQuth7WWW8UZ3x/ot/vyPs86h5xzEY
+        yzl2+v8nTZ8+/ccw5HoYdQDGnQVknDhr5oIHeVm2k59aftLyI5Wp2wkDvi4waCIAr7rBtqlTL7JiJh/l
+        crkf+J43AGXPFCgv2EVRc7OiBrpE3b9I/F2Xi793hfgHVgXgM/7Gd2YMx3JOIZ+M9wVlUJYVOzlIKfUz
+        KDdcoKyo7qz4d88Vf89y8Q+uHh84B3NVd2M+zwDDlGnFX1jSmUw3FMrf9fZ68Qfni//P2KDsa32SO9Yv
+        3R/fLj//9G5Z9J/tsuzLHQZ85t/4jmM4NloI8gAvNbM+uQDEGe15c6waF4b0xXUboci3kVJ+nfi3zxH/
+        ebg1lG98tU9mn7oZBt4jCz/fJp2nb5G2D/ql9cRmaTq2SfSxjQZ85t/4jmM4lnM4N3voymAhyBO8KSOS
+        l/HOUQerTnXJGh8r06LEf2BpYPgr62XO6Vtl4b+3ScepmyQ7QmM3jAvZkevMXPLoPn2b4Une6sGlRlZS
+        NnTZYNWqDtH1IDjeecb6nivEf6FHOj/YCqW3y8yT/VI/4jZuPCCP9pNbZCHChLwpg/mBMiP59IRqhYNN
+        eHHM0/hnV0r90FrE8V2S+2hA9Ahd223QREDelEFZlFmwCGcqnhhZfiAozvZ0e+x807+ulgWf/UZaTtzg
+        VDxNUAZlUSZlF4TDcEVLpK3zgTAmPMQ8Ex13pREx61K4EqAsymSCNDkhmRg9b6tVN10KOrzY9ZmR6Yrz
+        PvmVNJps7la2UqBMyqYOitUhXAA0SxXpGG17GwhBnVcHemTe6J0mW7sUrAYomzpQl/w+oW7Qqp0OmYNN
+        JvNNKICNyayRLdJ0vPIxXwrNx6+HLv3i70CzFC2A93WqByhzqguZI/M2vLxech8i2zsUuhDIfbjV6JTX
+        NnveJqv+xMkeaQ1j9uezTw1IfbG4f/da0c/0IjldJnobduXaS0QtbhU1ByVrVoOoGXDVLDJ3A5DD/5e2
+        il43S9SNiONfzxd9/xLRT64W/Tb4uPg70AB0nhwQdVd3vAAZb79Vf2JkLjPC8zxOaNnn10jbiRvHKvIi
+        dmAtDKn3k0qUD54GFzSLunOe6CdWiT76y7EyE6BOTf9AQoxPkWdTuVQBw95IKRxTZx7d7FTA7HI4rhJo
+        g+dsXyD69auc8gnqlmyO0B32WDPKJyzAQ5ESN3dJ+/F+p3A1O68rGwu6fFdToCDDgeMvQcwyHFzji0HV
+        ib6hS/T+NWN0oG7UMRoL3a0Z5ZO9wzMMW3avKn6w2bUiMKoDcd2XE7Vzkei/XGHygX4DuzbsmBPi7WtE
+        H4BBj/1C1L1LRF3XiYXCYoWGFMMfL83jQ92aHsOBKR4zZM0on8BkNGTYPFTc/SoCdHr6PnR6K2YmYzsG
+        wq5wTvNLfckxo9aM8sne2BqGTYexUwUCqwYm2X64d7LtvQ0JsmAcdYzeZ7yvrBnlE5jw6towzB75ni3v
+        W1eLfnSF6N8uFL0R7nzpjCDum7WoRsQ8457PzAmXtYm6BiFzD8Y+jMPNa31uniFewXt6Bd3/6Nj32SPI
+        R/ECfGvNKJ/AJFqAxqMlFoAuu7pdVF3erc34Mb9F9K1zRT/dc/7c4UDj+xuTvCa+AMkQqC9Ri7mLCeHp
+        gFWDCZWJ0iGzENQxMT+VEIiSoKJrO4RGeHxlHKMaDRFd/xZ0Z79fKvrPy0Xvxvt9qAr7sLN7VhqXN+6M
+        WFa9Hecvia3oAwaxEOw0XbJDvHVVct7Ek2CyDKqDa91CkxhaH9ToEt7iBGOabfTOxcUbK7TWzrkW6uCa
+        5PgUymCyEfrb5U6hFcOzWIwtOCMk22vmB9dYC/XX5fHYVBqhZCu8qdMptCTeROiwIUIIMBTUn7CQfH4O
+        fzuErF7KrV/FGCbFnvZgjmuMhWmirL6ptMJ5hyHEd0ll30Gy+t1i0ZtRs5ejxPH0Fy5gMTBvMF/cgbrO
+        Uni4RK4pBuiW6BPSOQyRksdh9QR2ziU8BHYqGlsumEDp+i+sc8sohsfRSsd80jkOkxAG8YVIL9zQJTzE
+        H5YFuzADjc5KtLCsAujvTRXgsZYuzHB4Cmf+R7DbqBBqAGMWtDjbXd4VmPsBl6wCqB54XDg3zQuR4Eos
+        /rlbv1iiGpRTAYiwg+QFSWgIwdBjdXHNCQGdEnPSvRIjJS9F9TIcQsbZoY0bKLmm9+fxtxXedL4WeRjN
+        z5Jk2Uz5UpTEq2Ywj38R+jt2yqVM2mAHWKILVLsQSpHxFboWJ+X9MNLgB+XNoVBVcRidH3SJ9KrUDyOk
+        wp/G9Lwm0Ue+/+Vl6qBs6BAZX+mfxkhjfhxd01F+0psIKBMVKdIDrq9/qqdbNStL9ufxc5FwnOf1e9Xz
+        BAVZ5g4hNv5cved1WfWqQ2M+kJgLV3y9xGVGGoAMIyshu+ofSIRkFyH+UEKjAUI3VpESCZ7kbWTExvMT
+        mQtjfEg2HPI/kmKfsP/8h5ZxAcdr8syTAZlV+yqkFBX7TI5JSu9FG/tuGZepnLMXrXMv2ukCvsDk+Uwu
+        JFMiUYOh3BcFygY9/roOUY+iYXkJBxzUblPC3oehBJ9Zz/HOjOFY1zU4eUNGxUvdRCjoGOsGoWzKn8pm
+        dkzqT2ULyRygcCKD8vuB8j6W5lzwSP1gU23ixQRvZ2AMr9eGAF60fgWwghB85t+GOIZjU7vMqFGNalSj
+        GtWoRjVy0pQp/wPZtO/tj/aPFwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAATsQADUu5DlhMvA6aS7sPy0u7
+        D+tLuw/7S7sP+0u7D+tLvA/LTLwOmku8DlhOxAANAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAS7sPIky7DppLvA/0TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0u8D/RMvA6aS7sPIgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASLYAB0u8D4dLuw/5TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9Luw/5S7wPh0i2
+        AAcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEe/DyBLuxDPTLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/S7wQz0e/DyAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABLvwssTLsP50y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLsP50m7Cy0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAR78PIEy7
+        D+dMvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLsP50e/DyAAAAAAAAAAAAAAAAAAAAAAAAAAAEi2
+        AAdLuxDPTLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/S7wQz0i2AAcAAAAAAAAAAAAA
+        AAAAAAAAS7sPh0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/S7wPhwAA
+        AAAAAAAAAAAAAEu7DyJLuw/5TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/S7sP1Eq7D3FLuw/hTLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9Luw/5S7sPIgAAAAAAAAAATLsOmky8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9Luw/+S7sPxUy7DloAqgADAAAAAEq7Do9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvA6aAAAAAE6wAA1LvA/0TLwQ/0y8EP9MvBD/TLwQ/0y8D91GuAgdS7kPM0m6
+        D2RLuw6LS7sPqUu7DrxLvA/DSroOv0u7Dq1Kuw6MSrwNXEu8CRsAAAAAAAAAAD+/AAxKvA5+S7sP9ky8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0u8D/ROxAANTLsOV0y8EP9MvBD/TLwQ/0y8EP9MvBD/S7sP1Tqw
+        AA0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEm7Cy1Kuw6JS7wP7Ey8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0u8DlhMuw6aTLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/S7wP9ku7D8hLuw6cS7sOeUu7DV9LvQ1OSbwNSUu6DU5Luw1fTL0OfEu6D6hLvA/hTLwQ/0y8
+        EP9MvBD/TLwQ/0u8D+VMuw/CS7sQ/ky8EP9MvBD/TLwQ/0y8EP9MvBD/TLwOmku7D8tMvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0u8D+lLvA56TMwACgAAAABLuw+mTLwQ/0y8EP9MvBD/TLwQ/0y8EP9LvA/LS7sP60y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/S7wP6Uu8D7dMvA/uTLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/S7sP6ku7D6ZJuw9TVdQABgAAAAAAAAAAP78ABEu8D7dMvBD/TLwQ/0y8EP9MvBD/TLwQ/0u7
+        D+tLuw/7TLwQ/0y8EP9MvBD/TLwQ/0y8EP9LvA42AAAAAAD/AAJLuQssTLsOV0q6D3RLuw+ES7sPiEu7
+        D4BKuw5tS7oNTki9DiMAAAAAAAAAAAAAAAAAAAAAAP8AAUm7D1NLvA/WTLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/S7sP+0u7D/tMvBD/TLwQ/0y8EP9MvBD/TLwQ/0y7DlcAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASL0OI0u7DnlLvA/bTLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9Luw/7S7sP60y8EP9MvBD/TLwQ/0y8EP9MvBD/S7sP/kq7D9BLvA+RSrwPYEi7
+        DDxLuw8iTL8MFEu0DxFKvwoYSroMKUm8DkVMvA5rSroOnUq7D9pLuw/+TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EL9Luw6bS7sP8Uy8EP9MvBD/TLwQ/0u7D+tLuw/LTLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/S7sP/Ey7
+        D7VKvA9BAAAAAAAAAABKvA9gTLwQ/0y8EP9MvBD/S7wPy0y7DppMvBD/TLwQ/0y8EP9MvBD/S7wP20u8
+        D5FLuw/ETLwP+Ey8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9Luw/nS7wOrUu7
+        DmlEugkaAAAAAAAAAAAAAAAAAAAAAEu8EG9MvBD/TLwQ/0y8EP9Luw6bTLsOV0y8EP9MvBD/TLwQ/0u7
+        D/5LvAkbAAAAAAAAAABItgAHSLwLLkq7EE9KvA5nTLsPdUq6DntLvA93S7oObEu8DlhIuww8RbkLFgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAEi2AA5Kug+CS7sP90y8EP9MvBD/TLwQ/0q9DllOsAANS7wP9Ey8
+        EP9MvBD/S7sP/ka4CB0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAEi8Cy5LvA6OS7wP8Ey8EP9MvBD/TLwQ/0y8EP9LvA/1SLYADgAA
+        AABKuw6aTLwQ/0y8EP9MvBD/TLwP2ku8D3dKuA06TLIACgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAB/AAJGuA4kSbsOV0u7D5RLuw/bTLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0q8
+        Dp0AAAAAAAAAAEu7DyJLuw/5TLwQ/0y8EP9MvBD/TLwQ/0y8EP9Luw/9S7wP4Uu8D8RLvA+wS7sPo0u8
+        Dp5Luw+iS7wOrEu7Dr5LvA/XS7sP90y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9Luw/6S7oNJQAAAAAAAAAAAAAAAEu7D4dMvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0q7DowAAAAAAAAAAAAAAAAAAAAASLYAB0u7EM9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvA/TOKoACQAAAAAAAAAAAAAAAAAAAAAAAAAAR78PIEy7D+dMvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/S7sP60a/DiQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAS78LLEy7
+        D+dMvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8D+pIuw8xAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAR78PIEu7EM9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9Luw/URr8OJAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAASLYAB0u7D4dLuw/5TLwQ/0y8EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9Luw/6S7wOjTjGAAkAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEu7DyJKuw6aS7wP9Ey8EP9MvBD/TLwQ/0y8
+        EP9MvBD/TLwQ/0y8EP9MvBD/TLwQ/0y8EP9Luw/2S7sOnkm7DSYAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABOsAANTLsOV0y7
+        DppLuw/LS7sP60u7D/tLuw/7S7sP60u8D8tLuw6bSbsOWkS7AA8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/8AD//8AAP/8AAA/+AAAH/AAAA/gAAAHwAAAA8AAAAOAAAABgAACAQAA
+        GAAA/+AAAAAAAAAAAIAAAAMAAQA8AAH/8AAAAAAAAAAAYAAAAeADAB+AA//+AIB/wAGAAAABwAAAA8AA
+        AAPgAAAH8AAAD/gAAB/8AAA//wAA///AA/8=
+</value>
+  </data>
 </root>
